filter测试和删除lombok